--- a/index.html
+++ b/index.html
@@ -1,80 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LILLEY CONSULTING & STRATEGY LIMITED</title>
+    <title>LILLEY CONSULTING & STRATEGY LIMITED – Advocacy with Integrity & Lived Experience</title>
+    <meta name="description" content="Independent advocacy and social work consultancy grounded in lived experience. After 10+ years supporting others, and a lifetime navigating service barriers personally, Tracy Lilley now helps others move through systems that often say 'no.'">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #f4f4f4;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 40px;
+            padding: 0;
+            background: #f8f8f8;
             color: #333;
         }
+        header {
+            background: #4B0082;
+            color: #fff;
+            padding: 1.2em;
+            text-align: center;
+        }
+        nav {
+            background: #eee;
+            padding: 0.8em;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 1em;
+            text-decoration: none;
+            color: #4B0082;
+            font-weight: bold;
+        }
         .container {
-            background-color: #ffffff;
             max-width: 800px;
-            margin: auto;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin: 2em auto;
+            padding: 1em;
+            background: #fff;
+            border-radius: 6px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
         }
         h1 {
             color: #4B0082;
         }
-        h2 {
-            color: #333;
-            margin-top: 30px;
-        }
-        p {
-            line-height: 1.6;
-        }
-        .footer {
-            margin-top: 40px;
-            font-size: 0.9em;
+        footer {
             text-align: center;
+            margin: 2em 0;
+            font-size: 0.9em;
             color: #666;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>LILLEY CONSULTING & STRATEGY LIMITED</h1>
-        <p><strong>Independent Social Work & Advocacy Consultancy</strong></p>
-        
-        <h2>About the Business</h2>
-        <p>
-            LILLEY CONSULTING & STRATEGY LIMITED is a New Zealand-based consultancy offering cross-sector advocacy, 
-            independent social work, and strategic guidance to individuals, families, and organisations navigating 
-            complex systems. Services focus on health, disability, education, and social services.
-        </p>
-        <p>
-            The business was founded by Tracy [Last Name], who brings over a decade of lived and professional experience 
-            in advocacy, system navigation, and ethical social practice. After years of voluntary work, Tracy has 
-            transitioned to a formal business model to deliver sustainable, values-aligned services.
-        </p>
-
-        <h2>Core Services</h2>
-        <ul>
-            <li>Strategic advocacy and system navigation</li>
-            <li>Independent social work consultancy</li>
-            <li>Lived-experience-informed training and advisory</li>
-            <li>Support for individuals, families, and organisations</li>
-        </ul>
-
-        <h2>Business Information</h2>
-        <p>
-            <strong>Director:</strong> Tracy [Last Name]<br>
-            <strong>NZBN:</strong> [Insert NZBN]<br>
-            <strong>Company Number:</strong> [Insert Company Number]<br>
-            <strong>Domain:</strong> lilleyconsultingstrategy.com (site under development)<br>
-            <strong>Use of Wise:</strong> Receiving service payments for consulting and advocacy. No physical goods sold.
-        </p>
-
-        <div class="footer">
-            This page was created to support account and business verification.
-        </div>
+        <p>Advocacy with Integrity & Lived Experience</p>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+    <div class="container">
+        <h2>Welcome</h2>
+        <p>I’ve spent over a decade helping others in the community access support — but I’ve also lived the barriers firsthand. As a mother, an advocate, and someone diagnosed with ADHD in my 40s after decades of masking, I know how isolating and complex these systems can be.</p>
+        <p>While seeking autism and ADHD assessments for my children during lockdowns, I heard “no, we can’t help you” more times than I can count. That experience — layered across public and private sectors — is what taught me to weave between services, fill the gaps, and stand beside those left out.</p>
     </div>
+    <footer>
+        &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
+    </footer>
 </body>
 </html>
