--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
         <h1>LILLEY CONSULTING & STRATEGY LIMITED</h1>
         <p>Advocacy with Integrity & Lived Experience</p>
     </header>
+    
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
     </nav>
+
     <div class="container">
         <h2>Welcome</h2>
         <p>I’ve spent over a decade helping others in the community access support — but I’ve also lived the barriers firsthand. As a mother, an advocate, and someone diagnosed with ADHD in my 40s after decades of masking, I know how isolating and complex these systems can be.</p>
