--- a/testimonials.html
+++ b/testimonials.html
@@ -22,9 +22,9 @@
     </nav>
     <div class="container">
         <h3>Community Voices</h3>
-        <blockquote>“It just works.”<br><span>— Lived Experience Client</span></blockquote>
+        <blockquote>“It just works.”<br><span>— Client</span></blockquote>
         <blockquote>“Others began listening to me.”<br><span>— Parent Advocate</span></blockquote>
-        <blockquote>“I felt seen.”<br><span>— System Navigation Client</span></blockquote>
+        <blockquote>“I felt seen.”<br><span>— Client</span></blockquote>
 
         <h3>What Professionals Have Said</h3>
         <blockquote>“Have you ever thought about becoming a psychiatrist?”<br><span>— Psychiatrist</span></blockquote>
