--- a/index.html
+++ b/index.html
@@ -1,74 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <meta charset="UTF-8">
-    <title>LILLEY CONSULTING & STRATEGY LIMITED – Advocacy with Integrity & Lived Experience</title>
-    <meta name="description" content="Independent advocacy and social work consultancy grounded in lived experience. After 10+ years supporting others, and a lifetime navigating service barriers personally, Tracy Lilley now helps others move through systems that often say 'no.'">
+    <title>Home – LILLEY CONSULTING & STRATEGY LIMITED</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f8f8f8;
-            color: #333;
-        }
-        header {
-            background: #4B0082;
-            color: #fff;
-            padding: 1.2em;
-            text-align: center;
-        }
-        nav {
-            background: #eee;
-            padding: 0.8em;
-            text-align: center;
-        }
-        nav a {
-            margin: 0 1em;
-            text-decoration: none;
-            color: #4B0082;
-            font-weight: bold;
-        }
-        .container {
-            max-width: 800px;
-            margin: 2em auto;
-            padding: 1em;
-            background: #fff;
-            border-radius: 6px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.05);
-        }
-        h1 {
-            color: #4B0082;
-        }
-        footer {
-            text-align: center;
-            margin: 2em 0;
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>LILLEY CONSULTING & STRATEGY LIMITED</h1>
-        <p>Advocacy with Integrity & Lived Experience</p>
+        <p>Clarity, Strategy & Lived Experience</p>
     </header>
-    
-<nav>
+    <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="quickstart.html">Quick Start</a>
+        <a href="blog.html">Blog</a>
+        <a href="testimonials.html">Testimonials</a>
     </nav>
-
     <div class="container">
-        <h2>Welcome</h2>
-        <p>I’ve spent over a decade helping others in the community access support — but I’ve also lived the barriers firsthand. As a mother, an advocate, and someone diagnosed with ADHD in my 40s after decades of masking, I know how isolating and complex these systems can be.</p>
-        <p>While seeking autism and ADHD assessments for my children during lockdowns, I heard “no, we can’t help you” more times than I can count. That experience — layered across public and private sectors — is what taught me to weave between services, fill the gaps, and stand beside those left out.</p>
+        <p>Welcome to LILLEY CONSULTING & STRATEGY LIMITED, a New Zealand-based consultancy offering independent social work, advocacy, and system navigation support.</p>
     </div>
-    <footer>
-        &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
-    </footer>
+    <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
 </html>
