--- a/quickstart.html
+++ b/quickstart.html
@@ -12,7 +12,7 @@
         <p>How to protect yourself in services (even when you’re overwhelmed)</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
