--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         <p>Stories, reflections, and lived experience insights</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
