--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Clarity, Strategy & Lived Experience</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
