--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
         <p>Your trust matters. Here’s what you need to know.</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
