--- a/testimonials.html
+++ b/testimonials.html
@@ -12,7 +12,7 @@
         <p>Real Words From Those Who’ve Worked With Me</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
