--- a/post1.html
+++ b/post1.html
@@ -12,13 +12,15 @@
         <p>A personal reflection from Tracy Lilley</p>
     </header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-    </nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <a href="blog.html">Blog</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <p>I didn’t have a title. I didn’t have permission. I just saw someone who needed help and brought them home with me.</p>
         <p>It was primary school. A friend of mine was in a situation that didn’t feel right — and I didn’t have the words, but I knew they needed safety. So I walked them home to my house. I don’t remember asking anyone. I just acted. It was instinct.</p>
