--- a/quickstart.html
+++ b/quickstart.html
@@ -12,12 +12,15 @@
         <p>How to protect yourself in services (even when you’re overwhelmed)</p>
     </header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-    </nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <a href="blog.html">Blog</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <h2>You Don’t Have to Be Ready. You Just Have to Be Informed.</h2>
         <h3>5 Things You Can Say in Any Appointment:</h3>
