--- a/testimonials.html
+++ b/testimonials.html
@@ -12,14 +12,15 @@
         <p>Real Words From Those Who’ve Worked With Me</p>
     </header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
-    </nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <a href="blog.html">Blog</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <h3>Community Voices</h3>
         <blockquote>“It just works.”<br><span>— Lived Experience Client</span></blockquote>
