--- a/blog.html
+++ b/blog.html
@@ -12,13 +12,15 @@
         <p>Stories, reflections, and lived experience insights</p>
     </header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-    </nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <a href="blog.html">Blog</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <h2><a href="post1.html">The First Time I Advocated</a></h2>
         <p><em>“I didn’t have a title. I didn’t have permission. I just saw someone who needed help and brought them home with me.”</em></p>
