--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <p>Clarity, Strategy & Lived Experience</p>
     </header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
-    </nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <a href="blog.html">Blog</a>
+    <a href="testimonials.html">Testimonials</a>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <p>Welcome to LILLEY CONSULTING & STRATEGY LIMITED, a New Zealand-based consultancy offering independent social work, advocacy, and system navigation support.</p>
     </div>
