--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,8 @@
         <h1>Privacy & Disclaimer</h1>
         <p>Your trust matters. Here’s what you need to know.</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
