--- a/quickstart.html
+++ b/quickstart.html
@@ -11,7 +11,8 @@
         <h1>Quick Start Guide</h1>
         <p>How to protect yourself in services (even when you’re overwhelmed)</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
