--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,8 @@
         <h1>Blog & News</h1>
         <p>Stories, reflections, and lived experience insights</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
