--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>LILLEY CONSULTING & STRATEGY LIMITED</h1>
         <p>Clarity, Strategy & Lived Experience</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
