--- a/post1.html
+++ b/post1.html
@@ -11,7 +11,8 @@
         <h1>The First Time I Advocated</h1>
         <p>A personal reflection from Tracy Lilley</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
