--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,8 @@
         <h1>Testimonials</h1>
         <p>Real Words From Those Who’ve Worked With Me</p>
     </header>
-    <nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
     <a href="/">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
