--- a/services.html
+++ b/services.html
@@ -8,23 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>What I Offer</h1>
-        <p>Individualised Support. Strategic Advocacy. Cross-Sector Experience.</p>
+        <h1>Services</h1>
+        <p>Strategic advocacy, system navigation, and lived-experience consulting</p>
     </header>
-<nav>
-        <a href="index.html">Home</a>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+    <nav>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="quickstart.html">Quick Start</a>
+        <a href="blog.html">Blog</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="privacy.html">Privacy</a>
     </nav>
     <div class="container">
-        <ul>
-            <li><strong>Independent Social Work Support:</strong> Guidance and system navigation rooted in SWRB ethics and boundaries.</li>
-            <li><strong>Strategic Advocacy Across Sectors:</strong> Help with health, education, disability, welfare, ACC, and justice systems.</li>
-            <li><strong>Consulting for Community Groups or Organisations:</strong> Lived-experience-informed policy and design support.</li>
-            <li><strong>Training & Advisory:</strong> Workshops and resources with neurodivergent and trauma-informed perspectives.</li>
-        </ul>
-        <p><strong>Who I Support:</strong> Individuals, families, professionals, and organisations seeking real support in complex systems.</p>
+        <p>I provide independent social work consulting, strategic advocacy, and system navigation services. My approach blends professional experience with lived reality — ensuring the full story is understood and that people aren’t reduced to forms or fragments.</p>
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
