--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,21 @@
 <body>
     <header>
         <h1>Contact</h1>
-        <p>Let’s Connect</p>
+        <p>Reach out for advocacy or support</p>
     </header>
-<nav>
-        <a href="index.html">Home</a>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+    <nav>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="quickstart.html">Quick Start</a>
+        <a href="blog.html">Blog</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="privacy.html">Privacy</a>
     </nav>
     <div class="container">
-        <p>Whether you need someone to walk beside you or you're seeking strategic insight — I’m here.</p>
-        <p><a href="mailto:advocacy@hollidaylife.com" class="email-button">Email Tracy</a></p>
+        <p>You can contact me via email at: <a href="mailto:advocacy@hollidaylife.com">advocacy@hollidaylife.com</a></p>
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
