--- a/about.html
+++ b/about.html
@@ -8,19 +8,24 @@
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
-        <p>Rooted in Lived Experience. Grounded in Ethics. Driven by Impact.</p>
+        <h1>About</h1>
+        <p>Meet the heart behind the advocacy</p>
     </header>
-<nav>
-        <a href="index.html">Home</a>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+    <nav>
+        <a href="/">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="quickstart.html">Quick Start</a>
+        <a href="blog.html">Blog</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="privacy.html">Privacy</a>
     </nav>
     <div class="container">
-        <p>Hi, I’m Tracy Lilley. I’ve been advocating for others for over a decade — but I’ve also spent much longer learning how to navigate systems for myself and my family.</p>
-        <p>Diagnosed with ADHD in 2021 after masking for over 40 years, I understand what it means to fall through the cracks. While seeking support for my children during the COVID lockdowns — both undergoing assessments for autism and ADHD — I encountered the same roadblocks I’d seen countless others face: confusion, gatekeeping, and “we can’t help you.”</p>
-        <p>I built this business as a way to turn hard-earned insight into support for others navigating similar challenges. I combine formal training with real-world experience to help people feel seen, heard, and supported.</p>
+        <p>I’m Tracy Lilley — a lived-experience advocate, strategic navigator, and independent social worker.</p>
+        <p>I bring over a decade of community support, personal system navigation, and professional training together to help people be heard — especially when services are fragmented or dismissive.</p>
+        <p>After 40+ years of masking and a late ADHD diagnosis, I’ve seen how easily people fall through the cracks. That’s why I created this space — to help others find their voice and their pathway through the noise.</p>
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
