--- a/index.html
+++ b/index.html
@@ -12,18 +12,25 @@
         <p>Clarity, Strategy & Lived Experience</p>
     </header>
     <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-<nav>
-    <a href="/">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="quickstart.html">Quick Start</a>
-    <a href="blog.html">Blog</a>
-    <a href="testimonials.html">Testimonials</a>
-    <a href="privacy.html">Privacy</a>
-</nav>
+    <nav>
+        <a href="/">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="quickstart.html">Quick Start</a>
+        <a href="blog.html">Blog</a>
+        <a href="testimonials.html">Testimonials</a>
+        <a href="privacy.html">Privacy</a>
+    </nav>
     <div class="container">
-        <p>Welcome to LILLEY CONSULTING & STRATEGY LIMITED, a New Zealand-based consultancy offering independent social work, advocacy, and system navigation support.</p>
+        <h2>Welcome to LILLEY CONSULTING & STRATEGY LIMITED</h2>
+        <p>I’m the gap between services and organisations — the part that isn’t funded, but is absolutely essential.</p>
+        <p>Navigating complex systems takes energy, clarity, and spoons (if you know, you know). Most people don’t have those to spare — especially not every day.</p>
+        <p>That’s where I come in.</p>
+        <p>I walk beside you. I help you make sense of systems, set goals that actually fit your life, and get clearer about what’s needed — not just what’s expected.</p>
+        <p>You were already resilient. This is about adding strategy, language, and strength to the resilience you already carry.</p>
+        <p>Whether it’s accessing support, being heard, or just not having to explain yourself again — you don’t have to do it alone.</p>
+        <p><strong>Let’s start the next step together.</strong></p>
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
