--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,12 @@
         <a href="privacy.html">Privacy</a>
     </nav>
     <div class="container">
-        <p>You can contact me via email at: <a href="mailto:advocacy@hollidaylife.com">advocacy@hollidaylife.com</a></p>
+        <p>You can contact me via email at:
+            <script type="text/javascript">
+                document.write('<a href="mailto:' + 'advocacy' + '@' + 'hollidaylife.com">advocacy@hollidaylife.com</a>');
+            </script>
+            <noscript>Email hidden to protect from spam.</noscript>
+        </p>
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
