--- a/gallery.html
+++ b/gallery.html
@@ -32,17 +32,23 @@
         <p>Moments, reflections, and pieces of the journey</p>
     </header>
     <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-    <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="privacy.html">Privacy</a>
-    </nav>
+    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+<nav>
+    <a href="/">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="quickstart.html">Quick Start</a>
+    <div class="dropdown">
+        <a href="#">More ▾</a>
+        <div class="dropdown-content">
+            <a href="blog.html">Blog</a>
+            <a href="testimonials.html">Testimonials</a>
+            <a href="gallery.html">Gallery</a>
+        </div>
+    </div>
+    <a href="privacy.html">Privacy</a>
+</nav>
     <div class="container">
         <div class="gallery">
             <div>
