--- a/testimonials.html
+++ b/testimonials.html
@@ -1,1 +1,47 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>testimonials.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Testimonials</h1><p>“It just works.”</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Testimonials | Lilley Consulting & Strategy</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #f1f1f1;
+      font-family: Arial, sans-serif;
+      padding: 2em;
+    }
+    .testimonial {
+      background-color: #1e1e1e;
+      border-left: 4px solid #6a1b9a;
+      padding: 1.5em;
+      margin-bottom: 2em;
+      font-style: italic;
+    }
+    .testimonial footer {
+      margin-top: 1.5em;
+      font-weight: bold;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Real Stories. Real Change.</h1>
+  <p>These are the words of people who chose to be heard, supported, and respected. Shared with their permission, their identities are protected.</p>
+
+  <section class="testimonial">
+    <blockquote>
+      <p>I really don’t think I would be here if it were not for Tracy.</p>
+      <p>We knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, and I realised she had grown personally a lot. I was taken aback...</p>
+      <p>In 2021, I underwent several surgeries... Tracy reached out when I was at my lowest — drinking, prescription drugs, limited mobility, and a mental health spiral. She just knew.</p>
+      <p>It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me pushing for answers — because she heard.</p>
+      <p>Since then, she’s had my back completely. She listens, distracts with kindness (“Send me photos of your garden”), and gently helps me reset...</p>
+      <p>If Tracy hadn’t reached out, I believe I would have been dismissed until I took my own life. I wasn’t far from it.</p>
+      <p>I can’t thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.</p>
+      <footer>— Shared with permission, identity withheld for privacy</footer>
+    </blockquote>
+  </section>
+
+</body>
+</html>
