--- a/testimonials.html
+++ b/testimonials.html
@@ -6,6 +6,13 @@
   <title>Testimonials | Lilley Consulting & Strategy</title>
   <style>
     body {
+      <header style="background-color: #111; padding: 1em;">
+  <nav style="display: flex; justify-content: space-between; align-items: center; max-width: 960px; margin: 0 auto;">
+    <h1 style="color: #fff; margin: 0; font-size: 1.2em;">Lilley Consulting & Strategy</h1>
+    <a href="index.html" style="color: #fff; text-decoration: none; font-weight: bold;">Home</a>
+  </nav>
+</header>
+      
       background-color: #121212;
       color: #f1f1f1;
       font-family: Arial, sans-serif;
