--- a/testimonials.html
+++ b/testimonials.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Testimonials | Lilley Consulting & Strategy</title>
   <style>
     body {
-      <header style="background-color: #111; padding: 1em;">
-  <nav style="display: flex; justify-content: space-between; align-items: center; max-width: 960px; margin: 0 auto;">
-    <h1 style="color: #fff; margin: 0; font-size: 1.2em;">Lilley Consulting & Strategy</h1>
-    <a href="index.html" style="color: #fff; text-decoration: none; font-weight: bold;">Home</a>
-  </nav>
-</header>
-      
-      background-color: #121212;
+      background-color: #111;
       color: #f1f1f1;
       font-family: Arial, sans-serif;
       padding: 2em;
     }
+
     .testimonial {
       background-color: #1e1e1e;
       border-left: 4px solid #6a1b9a;
@@ -25,14 +17,45 @@
       margin-bottom: 2em;
       font-style: italic;
     }
+
     .testimonial footer {
       margin-top: 1.5em;
       font-weight: bold;
       color: #ccc;
     }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 1em;
+      background-color: #111;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
+
+  <header>
+    <nav>
+      <h1 style="color: #fff; margin: 0; font-size: 1.2em;">Lilley Consulting & Strategy</h1>
+      <a href="index.html">Home</a>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Testimonial content continues here -->
+  </main>
+
+</body>
+    
 
   <h1>Real Stories. Real Change.</h1>
   <p>These are the words of people who chose to be heard, supported, and respected. Shared with their permission, their identities are protected.</p>
