--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,7 @@
       <a href="contact.html">Contact</a>
       <a href="quickstart.html">Quick Start</a>
       <a href="privacy.html">Privacy</a>
+      <a href="testimonials.html">Testimonials</a>
     </nav>
   </header>
 
